# dataverse-hub

./: .gitignore  InstallationController.java  README.md  makefile  pom.xml
docs/Sphinx-guides/: requirements.txt
docs/Sphinx-guides/source/: conf.py  index.md
docs/Sphinx-guides/source/developerGuide/: databaseDump.md  index.md  scheduledJobs.md
dv-hub-frontend/: pyproject.toml
dv-hub-frontend/dv-hub-shiny/: app.py
src/main/java/edu/harvard/iq/dataverse_hub/: DataverseHubApplication.java
src/main/java/edu/harvard/iq/dataverse_hub/beans/: APIPayloadSamples.java  ServerMessageResponse.java
src/main/java/edu/harvard/iq/dataverse_hub/cache/: CacheConfig.java  CacheEventLogger.java
src/main/java/edu/harvard/iq/dataverse_hub/model/: AccessToken.java  DevMetrics.java  DevMetricsReleases.java  Installation.java  InstallationMetrics.java  InstallationVersionInfo.java  MetricsByInstallation.java  ScheduledJob.java  ScheduledJobTransactionLog.java
src/main/java/edu/harvard/iq/dataverse_hub/repository/: AccessTokenRepo.java  DevMetricsReleasesRepo.java  DevMetricsRepo.java  InstallationRepo.java  InstallationVersionInfoRepo.java  InstallationsMetricsRepo.java  MetricsByInstallationRepo.java  ScheduledJobRepo.java  (+1 more)
src/main/resources/: application.properties  ehcache.xml
src/main/resources/db/migration/: V1_0_0__initial_load.sql  V1_0_1__installation_status.sql
src/test/java/edu/harvard/iq/dataverse_hub/: InstallationGitImporterTests.java  RestHelperServiceTests.java  ScheduledJobServiceTests.java  VersionDVInstallationCheckTests.java
(+48 files in other folders)
