[tool.poetry]
name = "dv-hub-frontend"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Tosca Villanueva <jptosca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faicons = "^0.2.2"
plotly = "^5.24.1"
shinywidgets = "^0.3.3"
setuptools = "^75.2.0"
requests = "^2.32.3"
ipyleaflet = "^0.19.2"
shiny = "^1.1.0"
polars = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
